Changed the datatype to pickle

--- a/example_pipeline.ipynb
+++ b/example_pipeline.ipynb
@@ -20,7 +20,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from os import path as pt\n",
-    "\n",
+    "import pickle\n",
     "from src.evaluations.evaluations import fake_loader, full_evaluation\n",
     "from src.utils import get_experiment_dir, set_seed, init_weights, save_obj\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
@@ -81,7 +81,9 @@
     }
    ],
    "source": [
-    "data = torch.load('./data/ref_data.pt')\n",
+    "with open(\"./data/ref_data.pkl\", \"rb\") as f:\n",
+    "    loaded_array = pickle.load(f)\n",
+    "data = torch.tensor(loaded_array)\n",
     "print(data.shape)\n",
     "print(data[:10,:,1 ])"
    ]
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "cee29fd7-2d91-4f04-871e-4f53b50752cc",
    "metadata": {
     "tags": []
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "bc601ac5",
    "metadata": {},
    "outputs": [],
@@ -221,8 +223,7 @@
     "    config.update({\"device\": \"cpu\"}, allow_val_change=True)\n",
     "\n",
     "# Load the dataset\n",
-    "training_set = TensorDataset(\n",
-    "        torch.load(config.data_dir + 'ref_data.pt').to(config.device).to(torch.float))\n",
+    "training_set = TensorDataset(data.to(config.device).to(torch.float))\n",
     "\n",
     "train_dl = DataLoader(\n",
     "    training_set,\n",
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "af26109c",
    "metadata": {},
    "outputs": [],
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "246765fe",
    "metadata": {},
    "outputs": [],
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "46566b05",
    "metadata": {},
    "outputs": [
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8a977183",
    "metadata": {},
    "outputs": [
@@ -504,7 +505,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:00<00:00,  9.58it/s]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:00<00:00, 13.58it/s]\n"
      ]
     }
    ],
@@ -519,57 +520,80 @@
    "id": "5a40e78e",
    "metadata": {},
    "source": [
+    "## Synthetic data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e1f1c52b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Generate fake data\n",
+    "\n",
+    "# Load validation dataset\n",
+    "with open(\"./data/val_data.pkl\", \"rb\") as f:\n",
+    "    validation_set = pickle.load(f)\n",
+    "    \n",
+    "generator = LSTMGenerator(\n",
+    "    input_dim=config.G_input_dim, hidden_dim=config.G_hidden_dim, output_dim=config.input_dim, n_layers=config.G_num_layers, init_fixed=config.init_fixed)\n",
+    "generator.load_state_dict(torch.load(pt.join(\n",
+    "    config.exp_dir, 'generator_state_dict.pt')))\n",
+    "\n",
+    "generator.eval()\n",
+    "with torch.no_grad():\n",
+    "    fake_dataset = generator(len(validation_set), config.n_lags,\n",
+    "                                  device='cpu').numpy()\n",
+    "    \n",
+    "with open(\"./data/fake_data.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(fake_dataset, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c539d379",
+   "metadata": {},
+   "source": [
     "## Model evaluation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e1f1c52b",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "176f1e3f",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 800 test samples: 100.0\n",
+      "Accuracy of the network on the 800 test samples: 99.875\n",
       "predictor(\n",
       "  (rnn): LSTM(4, 32, num_layers=2, batch_first=True)\n",
       "  (linear): Linear(in_features=32, out_features=8, bias=True)\n",
       ")\n",
-      "Predictive Score 0.3148941290378571\n",
-      "Discriminative Score 0.5\n",
-      "Marginal Score 1.1450455\n",
-      "Correlation Score 3.2618861\n",
-      "Auto-correlation Score 0.63081396\n",
-      "Covariance Score 0.022669071\n"
+      "Predictive Score 0.32127724528312684\n",
+      "Discriminative Score 0.49875\n",
+      "Marginal Score 1.1916721\n",
+      "Correlation Score 2.9889538\n",
+      "Auto-correlation Score 0.6517665\n",
+      "Covariance Score 0.025414629\n"
      ]
     }
    ],
    "source": [
-    "# Model evaluation\n",
-    "generator = LSTMGenerator(\n",
-    "    input_dim=config.G_input_dim, hidden_dim=config.G_hidden_dim, output_dim=config.input_dim, n_layers=config.G_num_layers, init_fixed=config.init_fixed)\n",
-    "generator.load_state_dict(torch.load(pt.join(\n",
-    "    config.exp_dir, 'generator_state_dict.pt')))\n",
+    "# Load validation dataset\n",
+    "with open(\"./data/val_data.pkl\", \"rb\") as f:\n",
+    "    validation_set = pickle.load(f)\n",
+    "    \n",
+    "# Load fake dataset\n",
+    "with open(\"./data/fake_data.pkl\", \"rb\") as f:\n",
+    "    fake_dataset = pickle.load(f)\n",
     "\n",
-    "# Use ref data to produce res_data\n",
-    "test_set = TensorDataset(\n",
-    "    torch.load(config.data_dir + 'res_data.pt').to(config.device).to(torch.float))\n",
-    "\n",
-    "test_dl = DataLoader(\n",
-    "    test_set,\n",
-    "    batch_size=config.batch_size,\n",
-    "    shuffle=True\n",
-    ")\n",
-    "\n",
-    "fake_test_dl = fake_loader(generator, num_samples=len(test_dl.dataset),\n",
-    "                           n_lags=config.n_lags, batch_size=test_dl.batch_size, algo=config.algo\n",
-    "                           )\n",
-    "\n",
-    "res_dict = full_evaluation(test_dl, fake_test_dl, config)\n",
+    "res_dict = full_evaluation(validation_set, fake_dataset, config)\n",
     "for k, v in res_dict.items():\n",
     "    print(k, v)"
    ]
@@ -577,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24397a7e",
+   "id": "dd5fc9b3",
    "metadata": {},
    "outputs": [],
    "source": []
